# autocref

./: Cargo.toml  license.md  readme.md
.github/workflows/: bins.yml  build.yml  cd.yml  ci.yml
src/: bookmarks.rs  docx.rs  fs.rs  lexer.rs  lib.rs  main.rs  parser.rs  render.rs
tests/: integration_test.rs
tests/test-docs/: doc-orig.xml  doc-targ.xml  doc-target.xml  fn-orig.xml  fn-target.xml  fns-orig.xml  fns-targ.xml
